cmake (2.8.12.2-2) UNRELEASED; urgency=medium

  * Search for Python 3.4 in FindPython{Interp,Libs}.
    - Add search_for_python3.4.diff

 -- Felix Geyer <fgeyer@debian.org>  Sun, 31 Aug 2014 21:27:28 +0200

cmake (2.8.12.2-1) unstable; urgency=medium

  [ Felix Geyer ]
  * New upstream release.
  * Add Lisandro and myself to uploaders.
  * Correctly pass CXXFLAGS with CPPFLAGS to bootstrap.
  * Suggest ninja-build as cmake provides a generator for ninja.
    (Closes: #743229)
  * Fix JNI detection on ppc64el.
    - Add FindJNI_ppc64le.diff, cherry-picked from upstream.
  * Drop ancient Breaks/Replaces.
  * Add lintian override for source-is-missing tags.
    These are just binary test files used by the test suite to verify that
    changing the RPATH works fine.
  * Drop some redundant build options from debian/rules.
  * Drop multiarch_findgtk2_fix.diff, was already fixed upstream in 2.8.11.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Update debian/copyright.

 -- Felix Geyer <fgeyer@debian.org>  Thu, 07 Aug 2014 20:16:56 +0200

cmake (2.8.12.1-1.6) unstable; urgency=low

  * Non-maintainer upload.
  * Fix HDF5 macro for HL and Fortran_HL components (closes: #756108).

 -- Gilles Filippini <pini@debian.org>  Wed, 30 Jul 2014 12:51:57 +0200

cmake (2.8.12.1-1.5) unstable; urgency=medium

  * Non-maintainer upload.
  * Detect the version string of Freetype 2.5. (Closes: #732182)
    - Add fix-FindFreetype-version.diff, cherry-picked from upstream.
  * Detect the multi-arch ImageMagick include dirs. (Closes: #747907)
    - Add fix-FindImageMagick-1.diff and fix-FindImageMagick-2.diff,
      cherry-picked from upstream.

 -- Felix Geyer <fgeyer@debian.org>  Tue, 22 Jul 2014 21:18:39 +0200

cmake (2.8.12.1-1.4) unstable; urgency=medium

  * Non-maintainer upload.
  * Add support for mips64 mips64el mipsn32 mipsn32el in 
    Modules/FindJNI.cmake.
    Add FindJNI.cmake.mips.patch.
    Patch by Yunqiang Su.
    Closes: #747174.
