@@ -24,6 +24,7 @@ Homepage: http://cmake.org/
 Package: cmake
 Architecture: any
 Multi-Arch: foreign
+Pre-Depends: dpkg (>= 1.17.5~)
 Depends: cmake-data (= ${source:Version}),
          procps [!hurd-any],
          ${misc:Depends},
@@ -56,6 +57,7 @@ Description: CMake data files (modules, templates and documentation)
 
 Package: cmake-curses-gui
 Architecture: any
+Pre-Depends: dpkg (>= 1.17.5~)
 Depends: cmake (= ${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
 Description: curses based user interface for CMake (ccmake)
  CMake is used to control the software compilation process using simple
@@ -70,6 +72,7 @@ Description: curses based user interface for CMake (ccmake)
 
 Package: cmake-qt-gui
 Architecture: any
+Pre-Depends: dpkg (>= 1.17.5~)
 Depends: cmake (= ${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
 Provides: cmake-gui
 Description: Qt4 based user interface for CMake (cmake-gui)
@@ -86,7 +89,7 @@ Description: Qt4 based user interface for CMake (cmake-gui)
 Package: cmake-doc
 Architecture: all
 Section: doc
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, cmake-data (= ${source:Version})
 Recommends: doc-base
 Breaks: cmake (<= 2.8.2-1),
         cmake-curses-gui (<= 2.8.2-1),
@@ -110,6 +113,7 @@ Package: cmake-dbg
 Architecture: any
 Section: debug
 Priority: extra
+Pre-Depends: dpkg (>= 1.17.5~)
 Depends: cmake (= ${binary:Version}), ${misc:Depends}
 Description: debugging symbols for CMake
  CMake is used to control the software compilation process using simple
