@@ -2,6 +2,8 @@ cmake (2.8.12.2-2) UNRELEASED; urgency=medium
 
   * Search for Python 3.4 in FindPython{Interp,Libs}.
     - Add search_for_python3.4.diff
+  * Don't create docs symlinks from arch-dep to arch-indep packages.
+    (Closes: #760823)
 
  -- Felix Geyer <fgeyer@debian.org>  Sun, 31 Aug 2014 21:27:28 +0200
 
